# project-hydra

./: .cursorignore  .gitignore  .prettierrc  README.md  package-lock.json  package.json
backend/dbscripts/: albums_table_create.sql  bands_table_create.sql  labels_table_create.sql  labels_unified_bands_table_create.sql
backend/scraper/: README.md  main.py  pyproject.toml
backend/scraper/database/: config.py  connect.py  insert.py
backend/scraper/entities/: label.py
src/: theme.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/blog/: page.tsx
src/app/checkout/: page.tsx
src/app/crud/: page.tsx
src/app/crud/_components/: DashboardHeader.tsx  DashboardLayout.tsx  DashboardSidebar.tsx  DashboardSidebarDividerItem.tsx  DashboardSidebarHeaderItem.tsx  DashboardSidebarPageItem.tsx  EmployeeCreate.tsx  EmployeeEdit.tsx  EmployeeForm.tsx  EmployeeList.tsx  EmployeeShow.tsx  PageContainer.tsx  ThemeSwitcher.tsx
src/app/crud/_context/: DashboardSidebarContext.ts
src/app/dashboard/: page.tsx
src/app/dashboard/_components/: AppNavBar.tsx  ChartUserByCountry.tsx  CustomizedDataGrid.tsx  Header.tsx  MainGrid.tsx  SessionsChart.tsx  SideMenuMobile.tsx
src/app/generative-ai/: page.tsx
src/app/marketing/: page.tsx
src/app/metal/: layout.tsx  page.tsx
src/app/signin/: page.tsx
src/app/signin-side/: page.tsx
src/app/signup/: page.tsx
src/app/visualizations/: page.tsx
src/components/: BackgroundGradient.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Highlights.tsx  HydraAppBar.tsx  LogoCollection.tsx  MapBoxTest.tsx  ReactRiberTest.tsx
(+43 files in other folders)
