[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pyautogui>=0.9.54",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "selenium>=4.36.0",
]

[dependency-groups]
dev = []
